--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
-# ───────────────────────── Build ─────────────────────────
+# ---------- Build ----------
   build:
     runs-on: ubuntu-latest
     steps:
@@ -19,56 +19,48 @@ jobs:
         with:
           node-version: 20
 
-      # ---------- Backend ----------
-      - name: Install backend dependencies
-        run: npm ci          # repo-root holds backend package.json
+      # Install backend dependencies (repo root)
+      - run: npm ci
 
-      # ---------- Frontend ----------
-      - name: Install frontend dependencies
-        working-directory: frontend
-        run: npm ci
-
+      # Install frontend dependencies and build bundle
       - name: Build React app
         working-directory: frontend
-        env:
-          CI: false
-        run: npm run build
+        run: |
+          npm ci
+          npm run build              # outputs to frontend/dist
 
-# ──────────────────────── Deploy ────────────────────────
+# ---------- Deploy ----------
   deploy:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      # need checkout to reference repo files later
-      - uses: actions/checkout@v3
-
       - name: Install sshpass
         run: sudo apt-get update -y && sudo apt-get install -y sshpass
 
       - name: Deploy to droplet
         env:
-          SSH_HOST:      ${{ secrets.SSH_HOST }}      # droplet IP
-          SSH_USERNAME:  ${{ secrets.SSH_USERNAME }}  # root
-          SSH_KEY:       ${{ secrets.SSH_KEY }}       # droplet password
+          SSH_HOST:      ${{ secrets.SSH_HOST }}
+          SSH_USERNAME:  ${{ secrets.SSH_USERNAME }}
+          SSH_KEY:       ${{ secrets.SSH_KEY }}
         run: |
           sshpass -p "$SSH_KEY" ssh -o StrictHostKeyChecking=no \
-            ${SSH_USERNAME}@${SSH_HOST} << 'EOF'
+            $SSH_USERNAME@$SSH_HOST << 'EOF'
           set -e
 
-          # v1. Backend update on droplet
-          cd /var/karateServer          # path where you cloned the repo on the VM
+          # Update backend code
+          cd /var/karateServer
           git pull origin main
           npm ci
+
+          # Restart backend
           pm2 restart express-server || pm2 start server.js --name express-server
           pm2 save
 
-          # 2. Frontend rebuild on droplet
-          cd /var/karateServer/frontend
+          # Build frontend on server
+          cd frontend
           npm ci
           npm run build
 
-          # 3. Deploy static bundle for Nginx
-          sudo rm -rf /var/www/html/*
+          # Copy new static files (do not wipe existing uploads)
           sudo cp -r dist/* /var/www/html
           EOF
-        
