--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^8.1.5",
+    "@tailwindcss/vite": "^4.1.11",
     "bcrypt": "^6.0.0",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
@@ -18,7 +19,8 @@
     "express": "^4.21.2",
     "mongodb": "^6.17.0",
     "nodemon": "^3.1.10",
-    "react-router-dom": "^7.6.3"
+    "react-router-dom": "^7.6.3",
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@types/react": "^19.1.8",
