--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.17.0",
     "nodemon": "^3.1.10",
+    "react-jwt": "^1.3.0",
     "react-router-dom": "^7.6.3",
     "tailwindcss": "^4.1.11"
   },
