--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "jest": "^30.0.4",
+    "supertest": "^7.1.3",
     "typescript": "^5.8.3"
   }
 }
